rename files, sort modules

--- a/notebook/PLL modeling.ipynb
+++ b/notebook/PLL modeling.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "miniature-ocean",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# These two lines allow for the notebook to automatically update to use the most\n",
