added laser frequency response

--- a/notebook/lasermodel-PI-dynamics-hybrid-ecl.ipynb
+++ b/notebook/lasermodel-PI-dynamics-hybrid-ecl.ipynb
@@ -52,7 +52,8 @@
       "N_th:          3.30e18 cm^(-3)\n",
       "I_th:          95.9 mA\n",
       "eta_d:         70.6 %\n",
-      "eta:           56.5 %\n"
+      "eta:           56.5 %\n",
+      "ST linewidth:  1.2e+02 Hz\n"
      ]
     }
    ],
@@ -78,7 +79,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\lkk12\\documents\\code\\pyphotonicssims\\pyphotonicsims\\laser_dynamics\\semiconductor_laser.py:96: RuntimeWarning: invalid value encountered in log\n",
+      "c:\\users\\lkk12\\documents\\code\\pyphotonicssims\\pyphotonicsims\\laser_dynamics\\semiconductor_laser.py:99: RuntimeWarning: invalid value encountered in log\n",
       "  g = self.g0 / (1 + self.eps * Np) * (np.log(Ne + self.N_s) - np.log(self.N_tr + self.N_s))\n"
      ]
     },
@@ -116,7 +117,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\lkk12\\documents\\code\\pyphotonicssims\\pyphotonicsims\\laser_dynamics\\semiconductor_laser.py:96: RuntimeWarning: invalid value encountered in log\n",
+      "c:\\users\\lkk12\\documents\\code\\pyphotonicssims\\pyphotonicsims\\laser_dynamics\\semiconductor_laser.py:99: RuntimeWarning: invalid value encountered in log\n",
       "  g = self.g0 / (1 + self.eps * Np) * (np.log(Ne + self.N_s) - np.log(self.N_tr + self.N_s))\n"
      ]
     },
@@ -181,6 +182,25 @@
     "plt.loglog(freqx,abs(p1))\n",
     "plt.xlabel('Frequency (Hz)')\n",
     "plt.ylabel('dP/dI (mW/mA)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5b67be1-f92b-47f1-a65e-d3dd76d0ea2e",
+   "metadata": {},
+   "source": [
+    "# Laser metrics vs cavity extention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a421054-9e5c-4f44-a06a-8c5788e343e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Lpx = np.logspace(-2,2,100)\n",
+    "laser.Lp = "
    ]
   }
  ],
