--- a/notebook/lasermodel-PI-dynamics-ecl.ipynb
+++ b/notebook/lasermodel-PI-dynamics-ecl.ipynb
@@ -29,7 +29,9 @@
    "id": "159f95c8-1926-430e-9a05-8d9542642f41",
    "metadata": {},
    "source": [
-    "## Laser metrics caculation: cavity Q, I_th, efficiency, ST linewidth"
+    "## This is a laser model based the book _Diode laser and Integrated Photonic Circuits_, TABLE 5.1 for in-plane and VSCEL laser designs\n",
+    "#### ECL is extended cavity laser with the cavity extended with low loss waveguide\n",
+    "#### Laser metrics caculation: cavity Q, threshold $I_{th}$, efficiency $\\eta$, ST linewidth $\\nu_{ST}$"
    ]
   },
   {
@@ -66,7 +68,7 @@
    "id": "6f2dc326-ac58-4edd-9221-a17fc839ebb7",
    "metadata": {},
    "source": [
-    "## PI sweep from 0 mA to 10*I_th, showing thresholding and linewidth narrowing behaviors"
+    "#### PI sweep from 0 mA to $10\\times I_{th}$, showing thresholding and linewidth narrowing behaviors"
    ]
   },
   {
@@ -79,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\lkk12\\documents\\code\\pyphotonicssims\\pyphotonicsims\\laser_dynamics\\semiconductor_laser.py:99: RuntimeWarning: invalid value encountered in log\n",
+      "c:\\users\\lkk12\\documents\\code\\pyphotonicsims\\pyphotonicsims\\laser_dynamics\\semiconductor_laser.py:99: RuntimeWarning: invalid value encountered in log\n",
       "  g = self.g0 / (1 + self.eps * Np) * (np.log(Ne + self.N_s) - np.log(self.N_tr + self.N_s))\n"
      ]
     },
@@ -104,7 +106,7 @@
    "id": "dc0d4b86-a86d-41a8-a4bb-58163794d63b",
    "metadata": {},
    "source": [
-    "## Transient visualization of laser dynamics"
+    "#### Time-domain transient visualization of laser dynamics"
    ]
   },
   {
@@ -117,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\lkk12\\documents\\code\\pyphotonicssims\\pyphotonicsims\\laser_dynamics\\semiconductor_laser.py:99: RuntimeWarning: invalid value encountered in log\n",
+      "c:\\users\\lkk12\\documents\\code\\pyphotonicsims\\pyphotonicsims\\laser_dynamics\\semiconductor_laser.py:99: RuntimeWarning: invalid value encountered in log\n",
       "  g = self.g0 / (1 + self.eps * Np) * (np.log(Ne + self.N_s) - np.log(self.N_tr + self.N_s))\n"
      ]
     },
@@ -142,7 +144,7 @@
    "id": "dc109f84-3af1-47b7-8092-8f7c36214d35",
    "metadata": {},
    "source": [
-    "## Laser current modulation frequency response, in terms of carrier density, photon density and output power"
+    "#### Laser current modulation frequency response, in terms of carrier density, photon density and output power "
    ]
   },
   {
