--- a/notebook/lasermodel-PI-dynamics-hybrid-ecl.ipynb
+++ b/notebook/lasermodel-PI-dynamics-hybrid-ecl.ipynb
@@ -29,7 +29,9 @@
    "id": "159f95c8-1926-430e-9a05-8d9542642f41",
    "metadata": {},
    "source": [
-    "## Laser metrics caculation: cavity Q, I_th, efficiency, ST linewidth"
+    "## This is a model for hybrid external cavity laser reported in the following paper\n",
+    "#### Fan, Youwen, et al. \"Hybrid integrated InP-Si 3 N 4 diode laser with a 40-Hz intrinsic linewidth.\" Optics express 28.15 (2020): 21713-21728. \n",
+    "#### Laser metrics caculation: cavity Q, threshold $I_{th}$, efficiency $\\eta$, ST linewidth $\\nu_{ST}$"
    ]
   },
   {
@@ -66,7 +68,7 @@
    "id": "6f2dc326-ac58-4edd-9221-a17fc839ebb7",
    "metadata": {},
    "source": [
-    "## PI sweep from 0 mA to 10*I_th, showing thresholding and linewidth narrowing behaviors"
+    "#### PI sweep from 0 mA to $10\\times I_{th}$, showing thresholding and linewidth narrowing behaviors"
    ]
   },
   {
@@ -104,7 +106,7 @@
    "id": "dc0d4b86-a86d-41a8-a4bb-58163794d63b",
    "metadata": {},
    "source": [
-    "## Transient visualization of laser dynamics"
+    "#### Time-domain transient visualization of laser dynamics"
    ]
   },
   {
@@ -142,7 +144,7 @@
    "id": "dc109f84-3af1-47b7-8092-8f7c36214d35",
    "metadata": {},
    "source": [
-    "## Laser current modulation frequency response, in terms of carrier density, photon density and output power"
+    "#### Laser current modulation frequency response, in terms of carrier density, photon density and output power "
    ]
   },
   {
@@ -194,13 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2a421054-9e5c-4f44-a06a-8c5788e343e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "Lpx = np.logspace(-2,2,100)\n",
-    "laser.Lp = "
+    "laser.Lp = Lpx[0]"
    ]
   }
  ],
