--- a/notebook/lasermodel-PI-dynamics-inplane.ipynb
+++ b/notebook/lasermodel-PI-dynamics-inplane.ipynb
@@ -29,7 +29,8 @@
    "id": "159f95c8-1926-430e-9a05-8d9542642f41",
    "metadata": {},
    "source": [
-    "## Laser metrics caculation: cavity Q, I_th, efficiency, ST linewidth"
+    "## This is a laser model based the book _Diode laser and Integrated Photonic Circuits_, TABLE 5.1 for in-plane and VSCEL laser designs\n",
+    "#### Laser metrics caculation: cavity Q, threshold $I_{th}$, efficiency $\\eta$, ST linewidth $\\nu_{ST}$"
    ]
   },
   {
@@ -58,7 +59,8 @@
     }
    ],
    "source": [
-    "laser = LaserModel('inplane')"
+    "laser = LaserModel('inplane')\n",
+    "# laser = LaserModel('vscel')"
    ]
   },
   {
@@ -66,7 +68,7 @@
    "id": "6f2dc326-ac58-4edd-9221-a17fc839ebb7",
    "metadata": {},
    "source": [
-    "## PI sweep from 0 mA to 10*I_th, showing thresholding and linewidth narrowing behaviors"
+    "#### PI sweep from 0 mA to $10\\times I_{th}$, showing thresholding and linewidth narrowing behaviors"
    ]
   },
   {
@@ -106,7 +108,7 @@
    "id": "dc0d4b86-a86d-41a8-a4bb-58163794d63b",
    "metadata": {},
    "source": [
-    "## Transient visualization of laser dynamics"
+    "#### Time-domain transient visualization of laser dynamics"
    ]
   },
   {
@@ -144,7 +146,7 @@
    "id": "dc109f84-3af1-47b7-8092-8f7c36214d35",
    "metadata": {},
    "source": [
-    "## Laser current modulation frequency response, in terms of carrier density, photon density and output power"
+    "#### Laser current modulation frequency response, in terms of carrier density, photon density and output power "
    ]
   },
   {
