--- a/notebook/SBS-laser-cascaded-emission-4meter-coil.ipynb
+++ b/notebook/SBS-laser-cascaded-emission-4meter-coil.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# General important stuff\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "import control as ct\n",
@@ -123,7 +122,7 @@
    "id": "2a7cdb27-10a1-4298-b2ff-df56d45889ca",
    "metadata": {},
    "source": [
-    "#### Pump laser detuning sweep, showing thresholding and linewidth narrowing behaviors"
+    "#### Pump laser detuning sweep above threshold"
    ]
   },
   {
