--- a/notebook/SBS-laser-cascaded-emission-400MQ-TE-R12mm.ipynb
+++ b/notebook/SBS-laser-cascaded-emission-400MQ-TE-R12mm.ipynb
@@ -149,7 +149,7 @@
    "source": [
     "Px = np.linspace(0,20*sbs.P_th,100)\n",
     "sbs.pump_sweep_visulization(Px)\n",
-    "plt.savefig('sbs_laser_pump_sweep.png', dpi = 1000, bbox_inches = 'tight')"
+    "# plt.savefig('sbs_laser_pump_sweep.png', dpi = 1000, bbox_inches = 'tight')"
    ]
   },
   {
