add cavity models

--- a/notebook/SBS-laser-cascaded-emission-4meter-coil.ipynb
+++ b/notebook/SBS-laser-cascaded-emission-4meter-coil.ipynb
@@ -156,10 +156,11 @@
    "metadata": {},
    "source": [
     "## SBS phase/frequency matching plot\n",
-    " - Integer multiple of resonator FSR, $m\\Delta\\nu_{FSR} = \\frac{mc}{n_g L}$, is almost a constant compared to the wavelength dependence of the SBS frequency shift, despite of very slight dispersion $n_g(\\lambda)$ $$m\\Delta\\nu_{FSR} = \\frac{mc}{n_g L}$$\n",
+    " - Integer multiple of resonator FSR, $N\\Delta\\nu_{FSR} = \\frac{Nc}{n_g L}$, is almost a constant compared to the wavelength dependence of the SBS frequency shift, despite of very slight dispersion $n_g(\\lambda)$ $$N\\Delta\\nu_{FSR} = \\frac{Nc}{n_g L}$$\n",
     " - SBS frequency shift $$\\Omega_B(\\lambda) = \\frac{2\\pi n_g V_{ac}}{\\lambda}$$\n",
-    " - Wheather or not $m\\Delta\\nu_{FSR}$ is right on target of $\\Omega_B(\\lambda)$, a Brillouin gain can be estimated with a mismatch term $\\Delta\\Omega = m\\Delta\\nu_{FSR} - \\Omega_B$, and $G_B(\\Delta\\Omega_B)$ peaks at $\\Delta\\Omega_B = 0$ or $m\\Delta\\nu_{FSR} = \\Omega_B$\n",
-    " - Measured pump-S1 beatnote frequency $f_{p-S1}$ at the minimum threshold wavelength $\\lambda_{match}$ indicate SBS phase matching, thus $\\Delta\\Omega_B = 0$ and $m\\Delta\\nu_{FSR} = \\Omega_B = f_{p-S1}$\n",
+    " - Wheather or not $N\\Delta\\nu_{FSR}$ is right on target of $\\Omega_B(\\lambda)$, a Brillouin gain can be estimated with a mismatch term $\\Delta\\Omega = N\\Delta\\nu_{FSR} - \\Omega_B$, and $G_B(\\Delta\\Omega_B)$ peaks at $\\Delta\\Omega_B = 0$ or $N\\Delta\\nu_{FSR} = \\Omega_B$\n",
+    "$$\\lambda = \\frac{2\\pi n_g^2 V_{ac} L}{Nc}$$\n",
+    " - Measured pump-S1 beatnote frequency $f_{p-S1}$ at the minimum threshold wavelength $\\lambda_{match}$ indicate SBS phase matching, thus $\\Delta\\Omega_B = 0$ and $N\\Delta\\nu_{FSR} = \\Omega_B = f_{p-S1}$\n",
     " \n",
     "<img src=\"./figures/SBS_phase_matching.png\" width=\"350\"/> <img src=\"./figures/GB_spectrum.png\" width=\"300\"/>"
    ]
