update resonator element and notebooks

--- a/notebook/PDH-model-Morton-laser-1550nm.ipynb
+++ b/notebook/PDH-model-Morton-laser-1550nm.ipynb
@@ -7,6 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These two lines allow for the notebook to automatically update to use the most\n",
+    "# up-to-date versions of the code being imported\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import control as ct\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -46,6 +51,14 @@
     "S_sh = get_S_shot(Pin, dv)\n",
     "S_pd = get_S_PD(NEP, Pin, dv) # [Hz^2/Hz]\n",
     "[S_sh,S_pd]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e2da15b-a630-401f-9c3c-68690595af4a",
+   "metadata": {},
+   "source": [
+    "<img src=\"./figures/control_model_2.png\" width=\"800\"/>"
    ]
   },
   {
