--- a/notebook/PLL-model-VCO-ZOS50.ipynb
+++ b/notebook/PLL-model-VCO-ZOS50.ipynb
@@ -9,6 +9,11 @@
    },
    "outputs": [],
    "source": [
+    "# These two lines allow for the notebook to automatically update to use the most\n",
+    "# up-to-date versions of the code being imported\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import control as ct\n",
     "import numpy as np\n",
     "import pandas as pd\n",
