--- a/notebook/SBS-laser-cascaded-emission-4meter-coil.ipynb
+++ b/notebook/SBS-laser-cascaded-emission-4meter-coil.ipynb
@@ -7,6 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These two lines allow for the notebook to automatically update to use the most\n",
+    "# up-to-date versions of the code being imported\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "import control as ct\n",
