--- a/notebook/1-sbs-lasers/SBS-laser-pzt-sbs-v1-R2710mm.ipynb
+++ b/notebook/1-sbs-lasers/SBS-laser-pzt-sbs-v1-R2710mm.ipynb
@@ -220,7 +220,7 @@
     "$$\\frac{\\Delta\\lambda}{\\lambda} = 2\\frac{\\Delta n_g}{n_g} + \\frac{\\Delta L}{L} + \\frac{\\Delta V_{ac}}{V_{ac}}$$\n",
     " - Measured pump-S1 beatnote frequency $f_{p-S1}$ at the minimum threshold wavelength $\\lambda_{match}$ indicate SBS phase matching, thus $\\Delta\\Omega_B = 0$ and $N\\Delta\\nu_{FSR} = \\Omega_B = f_{p-S1}$\n",
     " \n",
-    "<img src=\"./figures/SBS_phase_matching.png\" width=\"350\"/> <img src=\"./figures/GB_spectrum.png\" width=\"300\"/>"
+    "<img src=\"../figures/SBS_phase_matching.png\" width=\"350\"/> <img src=\"../figures/GB_spectrum.png\" width=\"300\"/>"
    ]
   },
   {
