coil resonator coupling validation between simulation and measurements

--- a/notebook/3-coupled-resonator-simulation/directional-coupler-design-simulation-1550nm-6umby80nm.ipynb
+++ b/notebook/3-coupled-resonator-simulation/directional-coupler-design-simulation-1550nm-6umby80nm.ipynb
@@ -311,7 +311,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e80f861c70>"
+       "<matplotlib.legend.Legend at 0x1c9554ce220>"
       ]
      },
      "execution_count": 6,
@@ -370,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0002713901337696623"
+       "<matplotlib.legend.Legend at 0x1c95570afd0>"
       ]
      },
      "execution_count": 7,
@@ -428,7 +428,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e810cdbb50>"
+       "<matplotlib.legend.Legend at 0x1c9557b06d0>"
       ]
      },
      "execution_count": 8,
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3a4beeb1-d70e-4d64-a419-1709ea6ed4a8",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "(1, 10000)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
